Fixed issue caused by Tidy output cleaning, which resulted in the logo having a little extra spacing below it in IE.

--- a/themes/default/css/flux.css
+++ b/themes/default/css/flux.css
@@ -308,6 +308,10 @@ input[type=text], input[type=password], textarea {
 	color: #aaa;
 }
 
+#logo {
+	display: block;
+}
+
 #submenu {
 	color: #bbb;
 }
